# hackatone

./: .gitignore  CLAUDE.md  CMakeLists.txt  input_data.tif  requirements-ui.txt  run_checkpoint.sh  run_ui.sh  run_viewer_tk.sh
app/: trn_viewer.py  trn_viewer_tk.py
data/: README.md
data/nmea/: elbrus_flight.nmea  elbrus_mostly_jammed.nmea  elbrus_mostly_jammed_gt.csv  elbrus_realistic.nmea  elbrus_realistic_gt.csv  elbrus_sine.nmea  elbrus_sine_gt.csv  orenburg_demo.nmea  orenburg_demo_gt.csv  orenburg_flight.nmea  tercom_straight.nmea  tercom_straight_gt.csv
results/: trn_estimate.csv
results/combined_realistic/: trn_estimate.csv
results/combined_sine/: trn_estimate.csv
results/mostly_jammed/: trn_estimate.csv
results/orenburg_demo/: trn_estimate.csv
results/sine/: trn_estimate.csv
results/tercom_demo/: trn_estimate.csv
scripts/: bootstrap_test_source.py  checkpoint_io.py  fetch_satellite.py  generate_nmea.py  geotiff_minimal.py  make_test_map.py
src/: checkpoint_loader.cpp  checkpoint_loader.hpp  contour_pf.cpp  contour_pf.hpp  dem_loader.cpp  dem_loader.hpp  kalman_filter.cpp  kalman_filter.hpp  keypoint_db.cpp  keypoint_db.hpp  line_navigator.cpp  line_navigator.hpp  main  main.cpp  nmea_parser.cpp  nmea_parser.hpp  particle_filter.cpp  particle_filter.hpp  ridge_map.cpp  ridge_map.hpp  terrain_correlator.cpp  terrain_correlator.hpp  visualizer.cpp  visualizer.hpp
test_source/: heights.txt  manifest.ini  map.tif  reference.csv
test_source/output/: trn_estimate.csv
